--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ altgraph==0.17.2
 asgiref==3.7.2
 Django==4.2.10
 future==0.18.2
-
 gunicorn==20.1.0
-macholib @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+macholib==1.15.2
 six @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 sqlparse==0.4.4
 typing_extensions==4.9.0
